# discord-tts-bot

./: README.md  bot.py  build.sh  main.py  pyproject.toml  render.yaml  utils.py
cogs/: admin.py  debug.py  dump.py  general.py  sound.py  tts.py
