[project]
name = "tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.8",
    "flask>=3.1.3",
    "py-cord[voice]>=2.8.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.2",
]
